styleguide spacing edit

--- a/docs/amplify-theme/_layouts/ui_library.html
+++ b/docs/amplify-theme/_layouts/ui_library.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			</div><!-- /.hero-subheader -->
 
-		<div class="section-padding" id="styleguide-section">
+		<div id="styleguide-section">
 			<div class="container docs-page-container">
 				<!-- <div class="github-edit-link">
 					<a title="Edit this page on github" class="" target="_blank" rel="noopener noreferrer" 
