added target _blank many places, changed quick start to get started

--- a/docs/amplify-theme/_includes/docs-header.html
+++ b/docs/amplify-theme/_includes/docs-header.html
@@ -71,7 +71,7 @@
 					{% endif %}
 				</div><!-- /.col -->
 			</div><!-- /.row -->
-			<a id="github-logo-docs" href="https://github.com/aws-amplify/amplify-js"><img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/GitHub-Mark-32px.png" /></a>
+			<a id="github-logo-docs" target="_blank" href="https://github.com/aws-amplify/amplify-js"><img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/GitHub-Mark-32px.png" /></a>
 		</div><!-- /.container -->
 	</header><!-- /.site-header -->
 {% endif %}
