--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -222,7 +222,7 @@
 				</div>
 				<div class="subheader inline col-sm-7">
 					Launch with our minimally-styled components and UI or whitelabel to your own specification.
-					<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/cli_home">
+					<a class="inline-block" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/ui_library">
 						<p class="learn-more-link">Learn more</p>
 						<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 					</a>
@@ -254,7 +254,7 @@
 					<div class="install-box" id="js-box">
 						<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/JS-Small-White@2x.png">
 						<div class="install-text">Build with JavaScript</div>
-						<a href="media/quick_start"><button class="install-button" id="js-btn">Get Started</button></a>
+						<a href="media/get_started"><button class="install-button" id="js-btn">Get Started</button></a>
 					</div>
 					<div class="install-box" id="react-box">
 						<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/React-Small-White@2x.png">
