--- a/docs/amplify-theme/_layouts/tutorials.html
+++ b/docs/amplify-theme/_layouts/tutorials.html
@@ -49,15 +49,12 @@
 													<div class="row">
 														{% for item in category.subs %}
 															<div class="col-xs-12 col-sm-6 col-lg-4">
-																<a href="{% if item.url_external  %}
+																<a target="_blank" href="{% if item.url_external  %}
 																			{{ item.url_external }} 
 																		{% endif %}
 																		{% if item.url %}
 																			{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }} 
 																		{% endif %}" 
-																		{% if item.url_external  %}
-																			onclick="trackOutboundLink('{{ item.url_external }}'); return false;"; 
-																		{% endif %}
 																	class="dev-guide-item">					
 																	<div class="dev-guide-content tutorials-content" data-mh>
 																		<div class="dev-guide-title" >
