--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <div>
-                                <a href="https://buildon.aws/?sc_channel=ba&sc_campaign=build_on_aws&sc_publisher=direct&trk=ba_buildonaws_direct"> 
+                                <a href="https://buildon.aws/?sc_channel=ba&sc_campaign=build_on_aws&sc_publisher=direct&trk=ba_buildonaws_direct" target="_blank"> 
                                     <button class="btn" id="install-cli-btn">Sign Up Now</button> 
                                 </a>
                             </div>
@@ -88,7 +88,7 @@ $ amplify configure</code>
                                             </pre>
                                         </div>    
                                     </div>
-                                <p class="subheader inline-block install-node-p">Please <a href="https://nodejs.org/en/download/">install node.js</a> before you initialize</p>
+                                <p class="subheader inline-block install-node-p">Please <a href="https://nodejs.org/en/download/" target="_blank">install node.js</a> before you initialize</p>
                             </div>
                             <div class="div-number">2</div>
                         </div>
@@ -114,7 +114,7 @@ $ amplify configure</code>
                                     <div class="platform-box">
                                         <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/JS@1x.png" />
                                         <p class="platform-title">Build with JavaScript</p>
-                                        <a href="quick_start"> <button class="btn">Get Started</button> </a>
+                                        <a href="get_started"> <button class="btn">Get Started</button> </a>
                                     </div>
                                     <div class="platform-box">
                                         <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/React@1x.png" />
@@ -142,22 +142,22 @@ $ amplify configure</code>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Apple@1x.png" />
                                             <p class="platform-title">Build with iOS</p>
-                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
+                                            <a href="https://docs.aws.amazon.com/aws-mobile/latest/developerguide/getting-started.html" target="_blank"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Droid@1x.png" />
                                             <p class="platform-title">Build with Android</p>
-                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
+                                            <a href="https://docs.aws.amazon.com/aws-mobile/latest/developerguide/getting-started.html" target="_blank"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/web.png" />
                                             <p class="platform-title">Build for Web</p>
-                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
+                                            <a href="get_started_docs?platform=purejs" target="_blank"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
                                             <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/ReactNat@1x.png" />
                                             <p class="platform-title">Build with React Native</p>
-                                            <a href="quick_start"> <button class="btn">Get Started</button> </a>
+                                            <a href="get_started_docs?platform=react-native" target="_blank"> <button class="btn">Get Started</button> </a>
                                         </div>
                                     </div>
                             </div><!-- /.row -->
