--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -1493,7 +1493,7 @@ li {
 }
 
 //=============================================================================
-/***                   new stuff for quick start home                      ***/
+/***                   new stuff for get started home                      ***/
 //=============================================================================
 
 #learn-more-about-cli-box {
@@ -2379,9 +2379,9 @@ li {
     h2 {
         color: #232F3E !important;
         font-family: "Amazon Ember" !important;
-        font-size: 40px !important;
-        font-weight: bold !important;
-        line-height: 60px !important;
+        font-size: 42px !important;	
+        font-weight: 300 !important;	
+        line-height: 53px !important;
         border-top: none !important;
         border-bottom: 1px solid #E1E4EA !important;
         padding: 20px 0 20px 0 !important;
