--- a/docs/amplify-theme/_layouts/tutorials.html
+++ b/docs/amplify-theme/_layouts/tutorials.html
@@ -19,7 +19,7 @@
 										<span>
 											<div class="dev-guide-content" data-mh>
 												<p class="dev-guide__title">{{ item.title }}</p>
-												<p class="dev-guide__excerpt">{{ item.excerpt }}</p>
+												<!-- <p class="dev-guide__excerpt">{{ item.excerpt }}</p> -->
 											</div><!-- /.nav-grid__content -->
 										</span><!-- /.nav-grid__item -->
 									</div><!-- /.col -->
