code block scroll issue

--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -740,6 +740,7 @@ a {
         pre.highlight {
             font-size: 12px !important;
             line-height: 16px !important;
+            overflow: hidden;
         }
     }
 
