--- a/docs/amplify-theme/_layouts/cli_home.html
+++ b/docs/amplify-theme/_layouts/cli_home.html
@@ -13,9 +13,9 @@
 							<div class="align-inner">
                                 <h1 class="hero-subheader__title">A Comprehensive & Powerful Serverless Toolchain</h1>
 								<div id="button-logo-container">
-                                    <a href="cli_guide" class="btn btn--dark btn--rounded btn--w-icon">
+                                    <a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started" class="btn btn--dark btn--rounded btn--w-icon">
                                         {% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
-                                        Install Amplify CLI
+                                        Get Started
                                     </a>
 									<img id="half-laptop" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Laptop-Image@2x.png">
 								</div>
@@ -33,54 +33,24 @@
 
 		<div class="section section-top cli" id="marketing-section">
 			<div class="container">
-				<div class="row">
-					<div class="header col-sm-10">
-						A simple and powerful command line interface built for developers.
-					</div>
-				</div>
-				<div class="row">
-					<div class="marketing-content">
-                        <h2 class="marketing-grid__title">Paragraph Headline Here</h2>
-                        <p class="marketing-grid__excerpt">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
-                    </div>
-                    <div class="button-container">
-                        <button class="btn top-section-btn">Get Started</button>
-                    </div>
-                    <img id="code-window" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Code-Window@2x.png">
-				</div><!-- /.row -->
+                <div class="header col-sm-10">
+                    Effortlessly Build, Test, and Deploy
+                </div>
+                <div class="integrate-content">
+                    <p class="marketing-grid__excerpt">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
+                </div>
+                <!-- <img id="code-window" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Code-Window@2x.png"> -->
 			</div><!-- /.container -->
 		</div><!-- /.section -->
 
-		<div class="section section-top not-top-section cli">
+		<div class="section section-top cli">
 			<div class="container">
 				<div class="header col-sm-10">
-					Integrate into your workflow with any platform.
+					Easy to Use Hosting for Static Assets and Websites
                 </div>
                 <div class="integrate-content">
                     <p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
-                <div class="logo-container">
-                <div class="logo-box">
-                    <p class="logo-title">JavaScript</p>
-                    <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/JS@1x.png"/>
-                </div>
-                <div class="logo-box">
-                    <p class="logo-title">React</p>
-                    <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/React@1x.png"/>
-                </div>
-                <div class="logo-box">
-                    <p class="logo-title">Angular</p>
-                    <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Angular@1x.png"/>
-                </div>
-                <div class="logo-box">
-                    <p class="logo-title">iOS</p>
-                    <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Apple@1x.png"/>
-                </div>
-                <div class="logo-box">
-                    <p class="logo-title">Android</p>
-                    <img class="circle-badge" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Circle-Badge/Droid@1x.png"/>
-                </div>
-            </div>
 			</div><!-- /.container -->
 		</div><!-- /.section -->
 
@@ -88,19 +58,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="header col-sm-10">
-                            Easy to use and abundant documentation. 
+                            Cloud Automation and Code Generation
                         </div>
                     </div>
                     <div class="row">
                         <div class="marketing-content">
                             <h2 class="marketing-grid__title">Paragraph Headline Here</h2>
                             <p class="marketing-grid__excerpt">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
-                        </div>
-                        <div class="button-container">
-                            <button class="btn top-section-btn">User Guide</button>
-                        </div>
-                        <div class="button-container">
-                            <button class="btn top-section-btn">CLI Reference</button>
                         </div>
                         <img id="pages" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Pages@2x.png">
                     </div><!-- /.row -->
